hla: Add new header containing some enums.

--- a/simgear/hla/CMakeLists.txt
+++ b/simgear/hla/CMakeLists.txt
@@ -22,6 +22,7 @@ set(HLA_HEADERS
     HLAOMTXmlVisitor.hxx
     HLAPropertyDataElement.hxx
     HLARawDataElement.hxx
+    HLATypes.hxx
     HLAVariantDataElement.hxx
     HLAVariantDataType.hxx
     HLAVariantRecordDataElement.hxx
