Make tsync part of libSimGearCore when building shared libraries

--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -47,7 +47,7 @@ if(SIMGEAR_SHARED)
 
     add_library(SimGearCore SHARED ${coreSources})
     set_property(TARGET SimGearCore PROPERTY COMPILE_FLAGS "-DNO_OPENSCENEGRAPH_INTERFACE=1")
-    
+
   # set_property(TARGET SimGearCore PROPERTY FRAMEWORK 1)
   #  message(STATUS "public header: ${publicHeaders}")
   #  set_property(TARGET SimGearCore PROPERTY PUBLIC_HEADER "${publicHeaders}")
@@ -59,40 +59,37 @@ if(SIMGEAR_SHARED)
     target_link_libraries(SimGearCore ${ZLIB_LIBRARY} ${RT_LIBRARY})
     install(TARGETS SimGearCore LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 
-    if(NOT SIMGEAR_HEADLESS)
-        if(LIBSVN_FOUND)
-            add_definitions(${APR_CFLAGS})
+    if(LIBSVN_FOUND)
+        add_definitions(${APR_CFLAGS})
 
-            IF(APPLE)
-                set_property(SOURCE scene/tsync/terrasync.cxx PROPERTY COMPILE_FLAGS "-iwithsysroot ${LIBSVN_INCLUDE_DIR}")
-            ELSE()
-                include_directories(${LIBSVN_INCLUDE_DIR})
-            ENDIF(APPLE)
-        endif(LIBSVN_FOUND)
-        
+        IF(APPLE)
+            set_property(SOURCE scene/tsync/terrasync.cxx PROPERTY COMPILE_FLAGS "-iwithsysroot ${LIBSVN_INCLUDE_DIR}")
+        ELSE()
+            include_directories(${LIBSVN_INCLUDE_DIR})
+        ENDIF(APPLE)
+        target_link_libraries(SimGearCore ${LIBSVN_LIBRARIES})
+    endif(LIBSVN_FOUND)
+
+    if(NOT SIMGEAR_HEADLESS)
         list(APPEND sceneSources scene/util/SGCoreOSGDependant.cxx)
-        
+
         add_library(SimGearScene SHARED ${sceneSources})
       # set_property(TARGET SimGearScene PROPERTY FRAMEWORK 1)
       # set_property(TARGET SimGearScene PROPERTY PUBLIC_HEADER "${publicHeaders}")
         set_property(TARGET SimGearScene PROPERTY LINKER_LANGUAGE CXX)
         set_property(TARGET SimGearScene PROPERTY VERSION   ${SIMGEAR_VERSION})
         set_property(TARGET SimGearScene PROPERTY SOVERSION ${SIMGEAR_SOVERSION})
-    
-        target_link_libraries(SimGearScene 
+
+        target_link_libraries(SimGearScene
             SimGearCore
-            ${ZLIB_LIBRARY} 
-            ${OPENSCENEGRAPH_LIBRARIES} 
+            ${ZLIB_LIBRARY}
+            ${OPENSCENEGRAPH_LIBRARIES}
             ${OPENAL_LIBRARY} ${ALUT_LIBRARY}
             ${OPENGL_LIBRARY}
             ${JPEG_LIBRARY})
     
-        if(LIBSVN_FOUND)
-            target_link_libraries(SimGearScene ${LIBSVN_LIBRARIES})
-        endif(LIBSVN_FOUND)
-
         install(TARGETS SimGearScene LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
     endif()
-   
+
 endif(SIMGEAR_SHARED)
-    
+
