Fix string comparison

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -218,7 +218,7 @@ if(WIN32)
     set( RT_LIBRARY "winmm" )
 endif(WIN32)    
 
-if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang") 
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang") 
    set (WARNING_FLAGS "-Wall -Wno-overloaded-virtual")
 endif() 
 
