--- a/projects/VC90/SimGear.vcproj
+++ b/projects/VC90/SimGear.vcproj
@@ -1120,6 +1120,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\simgear\scene\model\SGLightAnimation.cxx"
+				>
+			</File>
+			<File
 				RelativePath="..\..\simgear\scene\model\SGMaterialAnimation.cxx"
 				>
 			</File>
