Untangle osg singleton dependencies.
Take two. The ModelRegistry's are already derived from osg::Referenced.
So also introduce the osg dependent version in simgear/scene/util.

--- a/simgear/scene/util/CMakeLists.txt
+++ b/simgear/scene/util/CMakeLists.txt
@@ -4,6 +4,7 @@ set(HEADERS
     CopyOp.hxx
     NodeAndDrawableVisitor.hxx
     OsgMath.hxx
+    OsgSingleton.hxx
     PrimitiveUtils.hxx
     QuadTreeBuilder.hxx
     RenderConstants.hxx
