Update to latest expat for improved BOM / encoding handling.
(Related to http://code.google.com/p/flightgear-bugs/issues/detail?id=635)

--- a/simgear/xml/CMakeLists.txt
+++ b/simgear/xml/CMakeLists.txt
@@ -23,6 +23,8 @@ set(SOURCES
     xmlrole.c
     xmltok.c
     easyxml.cxx
+    internal.h
+    ascii.h
     )
 
 simgear_component(xml xml "${SOURCES}" "${HEADERS}")
