Change how HAVE_EXPAT_CONFIG_H is defined, to hopefully fix MSVC properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,7 +227,7 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    set (WARNING_FLAGS "-Wall -Wno-overloaded-virtual")
 endif() 
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${WARNING_FLAGS} ${MSVC_FLAGS} -DHAVE_EXPAT_CONFIG_H")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${WARNING_FLAGS} ${MSVC_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WARNING_FLAGS} ${MSVC_FLAGS} ${BOOST_CXX_FLAGS}")
 
 include_directories(${PROJECT_SOURCE_DIR})
@@ -238,8 +238,8 @@ include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS}
     ${Boost_INCLUDE_DIRS} ${ZLIB_INCLUDE_DIR} 
     ${ALUT_INCLUDE_DIR} ${OPENAL_INCLUDE_DIR} )
 
-
 add_definitions(-DHAVE_CONFIG_H)
+add_definitions(-DHAVE_EXPAT_CONFIG_H)
 
 # configure a header file to pass some of the CMake settings
 # to the source code
