bvh: Add an abstract pager implementation.
Implement a paging implementation for bounding
volume hierarchy nodes. We will need this for
hla clients that need ground queries.

--- a/simgear/bvh/CMakeLists.txt
+++ b/simgear/bvh/CMakeLists.txt
@@ -8,6 +8,9 @@ set(HEADERS
     BVHMotionTransform.hxx
     BVHNearestPointVisitor.hxx
     BVHNode.hxx
+    BVHPageNode.hxx
+    BVHPageRequest.hxx
+    BVHPager.hxx
     BVHStaticBinary.hxx
     BVHStaticData.hxx
     BVHStaticGeometry.hxx
@@ -27,6 +30,9 @@ set(SOURCES
     BVHLineSegmentVisitor.cxx
     BVHMotionTransform.cxx
     BVHNode.cxx
+    BVHPageNode.cxx
+    BVHPageRequest.cxx
+    BVHPager.cxx
     BVHStaticBinary.cxx
     BVHStaticGeometry.cxx
     BVHStaticLeaf.cxx
