scenery: OptionsReadFileCallback for use with reader writer options.
The new callback has a default implementation of the callback
methods that do call back into the registrys callback before
calling the registrys implementation directly.
This is meant to be used together with ReaderWriterOptions that
still want to call back into the normal callback chain of the
registry.

--- a/simgear/scene/util/CMakeLists.txt
+++ b/simgear/scene/util/CMakeLists.txt
@@ -4,7 +4,8 @@ set(HEADERS
     CopyOp.hxx
     DeletionManager.hxx
     NodeAndDrawableVisitor.hxx
-	Noise.hxx
+    Noise.hxx
+    OptionsReadFileCallback.hxx
     OsgMath.hxx
     OsgSingleton.hxx
     PrimitiveUtils.hxx
@@ -31,7 +32,8 @@ set(SOURCES
     CopyOp.cxx
     DeletionManager.cxx
     NodeAndDrawableVisitor.cxx
-	Noise.cxx
+    Noise.cxx
+    OptionsReadFileCallback.cxx
     PrimitiveUtils.cxx
     QuadTreeBuilder.cxx
     SGEnlargeBoundingBox.cxx
