--- a/simgear/math/CMakeLists.txt
+++ b/simgear/math/CMakeLists.txt
@@ -42,19 +42,11 @@ set(SOURCES
 simgear_component(math math "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
-
-if (SIMGEAR_SHARED)
-    set(TEST_LIBS SimGearCore)
-else()
-    set(TEST_LIBS sgmath sgstructure sgdebug)
-endif()
-
-
 add_executable(math_test SGMathTest.cxx)
-target_link_libraries(math_test ${TEST_LIBS})
+target_link_libraries(math_test SimGearCore)
 add_test(math ${EXECUTABLE_OUTPUT_PATH}/math_test)
 
 add_executable(geometry_test SGGeometryTest.cxx)
-target_link_libraries(geometry_test ${TEST_LIBS})
+target_link_libraries(geometry_test SimGearCore)
 add_test(geometry ${EXECUTABLE_OUTPUT_PATH}/geometry_test)
 endif(ENABLE_TESTS)
