--- a/simgear/props/CMakeLists.txt
+++ b/simgear/props/CMakeLists.txt
@@ -24,19 +24,11 @@ set(SOURCES
 simgear_component(props props "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
-
-if (SIMGEAR_SHARED)
-    set(TEST_LIBS SimGearCore)
-else()
-    set(TEST_LIBS sgprops sgxml sgstructure sgmisc sgdebug)
-endif()
-
-
 add_executable(test_props props_test.cxx)
-target_link_libraries(test_props ${TEST_LIBS})
+target_link_libraries(test_props SimGearCore)
 add_test(test_props ${EXECUTABLE_OUTPUT_PATH}/test_props)
 
 add_executable(test_propertyObject propertyObject_test.cxx)
-target_link_libraries(test_propertyObject ${TEST_LIBS})
+target_link_libraries(test_propertyObject SimGearCore)
 add_test(test_propertyObject ${EXECUTABLE_OUTPUT_PATH}/test_propertyObject)
 endif(ENABLE_TESTS)
