--- a/simgear/scene/tgdb/CMakeLists.txt
+++ b/simgear/scene/tgdb/CMakeLists.txt
@@ -41,16 +41,8 @@ set(SOURCES
 simgear_scene_component(tgdb scene/tgdb "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
-
-  if (SIMGEAR_SHARED)
-    set(TEST_LIBS SimGearCore)
-  else()
-    set(TEST_LIBS sgbucket sgmisc sgmath sgdebug)
-  endif()
-  
-
   add_executable(BucketBoxTest BucketBoxTest.cxx)
-  target_link_libraries(BucketBoxTest ${TEST_LIBS})
+  target_link_libraries(BucketBoxTest SimGearCore)
   add_test(BucketBoxTest ${EXECUTABLE_OUTPUT_PATH}/BucketBoxTest)
 
 endif(ENABLE_TESTS)
